// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate development k8s manifests 1`] = `
"---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    socialgouv/creator: autodevops
    janitor/ttl: 15d
    field.cattle.io/creatorId: gitlab
    field.cattle.io/projectId: ''
    git/branch: refs/heads/mybranch
    git/remote: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    azure-pg-admin-user: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  name: nos1000jours-blues.epds-widget-mybranch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
    component: nginx
  name: nos1000jours-blues.epds-widget
  namespace: nos1000jours-blues.epds-widget-mybranch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nos1000jours-blues.epds-widget
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        app.github.com/job: '5678'
        app.github.com/ref: refs/heads/mybranch
        app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
        app.github.com/run: '1234'
        app.github.com/sha: '0123456'
      labels:
        app: nos1000jours-blues.epds-widget
        application: nos1000jours-blues.epds-widget
        owner: nos1000jours-blues.epds-widget
        team: nos1000jours-blues.epds-widget
        cert: wildcard
        component: nginx
    spec:
      containers:
        - image: >-
            ghcr.io/socialgouv/nos1000jours/nos1000jours-blues.epds-widget:sha-0123456789abcdefghijklmnopqrstuvwxyz0123
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: nos1000jours-blues.epds-widget
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
          envFrom:
            - configMapRef:
                name: nos1000jours-blues.epds-widget-configmap
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nos1000jours-blues.epds-widget-configmap
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  namespace: nos1000jours-blues.epds-widget-mybranch
data:
  NODE_ENV: production
  MATOMO_SITE_ID: '60'
  MATOMO_URL: https://matomo.fabrique.social.gouv.fr/
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  name: nos1000jours-blues.epds-widget
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  namespace: nos1000jours-blues.epds-widget-mybranch
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nos1000jours-blues.epds-widget
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  name: nos1000jours-blues.epds-widget
  namespace: nos1000jours-blues.epds-widget-mybranch
spec:
  rules:
    - host: nos1000jours-blues.epds-widget-mybranch.dev2.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: nos1000jours-blues.epds-widget
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nos1000jours-blues.epds-widget-mybranch.dev2.fabrique.social.gouv.fr
      secretName: wildcard-crt
"
`;

exports[`generate preproduction k8s manifests 1`] = `
"---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    socialgouv/creator: autodevops
    field.cattle.io/creatorId: gitlab
    field.cattle.io/projectId: ''
    git/branch: refs/tags/v1.3.22
    git/remote: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    azure-pg-admin-user: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  name: nos1000jours-blues.epds-widget-preprod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
    component: nginx
  name: nos1000jours-blues.epds-widget
  namespace: nos1000jours-blues.epds-widget-preprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nos1000jours-blues.epds-widget
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        app.github.com/job: '5678'
        app.github.com/ref: refs/tags/v1.3.22
        app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
        app.github.com/run: '1234'
        app.github.com/sha: '0123456'
      labels:
        app: nos1000jours-blues.epds-widget
        application: nos1000jours-blues.epds-widget
        owner: nos1000jours-blues.epds-widget
        team: nos1000jours-blues.epds-widget
        cert: wildcard
        component: nginx
    spec:
      containers:
        - image: ghcr.io/socialgouv/nos1000jours/nos1000jours-blues.epds-widget:1.3.22
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: nos1000jours-blues.epds-widget
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
          envFrom:
            - configMapRef:
                name: nos1000jours-blues.epds-widget-configmap
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nos1000jours-blues.epds-widget-configmap
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  namespace: nos1000jours-blues.epds-widget-preprod
data:
  NODE_ENV: production
  MATOMO_SITE_ID: '60'
  MATOMO_URL: https://matomo.fabrique.social.gouv.fr/
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  name: nos1000jours-blues.epds-widget
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  namespace: nos1000jours-blues.epds-widget-preprod
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nos1000jours-blues.epds-widget
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    cert: wildcard
  name: nos1000jours-blues.epds-widget
  namespace: nos1000jours-blues.epds-widget-preprod
spec:
  rules:
    - host: nos1000jours-blues.epds-widget-preprod.dev2.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: nos1000jours-blues.epds-widget
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nos1000jours-blues.epds-widget-preprod.dev2.fabrique.social.gouv.fr
      secretName: wildcard-crt
"
`;

exports[`generate production k8s manifests 1`] = `
"---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    socialgouv/creator: autodevops
    field.cattle.io/creatorId: gitlab
    field.cattle.io/projectId: ''
    git/branch: refs/tags/v1.3.22
    git/remote: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    azure-pg-admin-user: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
  name: nos1000jours-blues.epds-widget
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
    component: nginx
  name: nos1000jours-blues.epds-widget
  namespace: nos1000jours-blues.epds-widget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nos1000jours-blues.epds-widget
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        app.github.com/job: '5678'
        app.github.com/ref: refs/tags/v1.3.22
        app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
        app.github.com/run: '1234'
        app.github.com/sha: '0123456'
      labels:
        app: nos1000jours-blues.epds-widget
        application: nos1000jours-blues.epds-widget
        owner: nos1000jours-blues.epds-widget
        team: nos1000jours-blues.epds-widget
        component: nginx
    spec:
      containers:
        - image: ghcr.io/socialgouv/nos1000jours/nos1000jours-blues.epds-widget:1.3.22
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: nos1000jours-blues.epds-widget
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
          envFrom:
            - configMapRef:
                name: nos1000jours-blues.epds-widget-configmap
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nos1000jours-blues.epds-widget-configmap
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
  namespace: nos1000jours-blues.epds-widget
data:
  NODE_ENV: production
  MATOMO_SITE_ID: '60'
  MATOMO_URL: https://matomo.fabrique.social.gouv.fr/
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
  name: nos1000jours-blues.epds-widget
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  namespace: nos1000jours-blues.epds-widget
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nos1000jours-blues.epds-widget
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-blues.epds-widget
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: nos1000jours-blues.epds-widget
    application: nos1000jours-blues.epds-widget
    owner: nos1000jours-blues.epds-widget
    team: nos1000jours-blues.epds-widget
  name: nos1000jours-blues.epds-widget
  namespace: nos1000jours-blues.epds-widget
spec:
  rules:
    - host: nos1000jours-blues.epds-widget.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: nos1000jours-blues.epds-widget
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nos1000jours-blues.epds-widget.fabrique.social.gouv.fr
      secretName: nos1000jours-blues.epds-widget-crt
"
`;
